Improve support to templates

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,14 @@ set( LLVM_LINK_COMPONENTS
 
 set( PYWRAP pywrap )
 add_clang_executable( ${PYWRAP}
-	Pywrap.cpp
+	src/Printer.cpp
+	src/FrontendAction.cpp
+	src/Consumer.cpp
+	src/MatchHandler.cpp
+	src/Pywrap.cpp
 )
+
+target_include_directories( ${PYWRAP} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include )
 
 target_link_libraries( ${PYWRAP}
 	PRIVATE
