--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ add_clang_library( pywrap-lib
 	src/binding/Binding.cpp
 	src/binding/Destructor.cpp
 	src/binding/Compare.cpp
+	src/binding/Method.cpp
 	src/binding/TypeObject.cpp
 	src/binding/Tag.cpp
 	src/binding/Module.cpp
