--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ add_clang_library( pywrap-lib
 	src/binding/Module.cpp
 	src/binding/Function.cpp
 	src/binding/Enum.cpp
+	src/binding/CXXRecord.cpp
 	src/binding/Wrapper.cpp
 	src/Printer.cpp
 	src/FrontendAction.cpp
